Make book links smaller to stop page layout breaking

--- a/src/styles/partials/content/_series.scss
+++ b/src/styles/partials/content/_series.scss
@@ -91,3 +91,9 @@
 		content: '— ';
 	}
 }
+.series-item-external-link-info {
+	overflow: hidden;
+	@media(max-width: $screen-sm-max){
+		font-size: 12px;
+	}
+}
